--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
-version: "3.9"
 services:
   web:
     build: .
     ports:
       - "8080:80"
+    depends_on:
+      - db
     environment:
       DB_HOST: db
       DB_NAME: app
       DB_USER: root
       DB_PASS: example
-    depends_on:
-      - db
 
   db:
     image: mysql:8.0
@@ -18,7 +17,7 @@ services:
       MYSQL_DATABASE: app
       MYSQL_ROOT_PASSWORD: example
     ports:
-      - "3306:3306"
+      - "3307:3306"   # đổi 3306 -> 3307
     volumes:
       - dbdata:/var/lib/mysql
 
