--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,23 +8,39 @@ on:
 jobs:
   ftp-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          # tránh lỗi git 128 khi action cần lịch sử commit
+          fetch-depth: 0
 
       - name: Deploy via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
+
+          # InfinityFree dùng FTPS (Explicit TLS) trên port 21
+          protocol: ftps
           port: 21
+
+          # NHỚ: FTP_PATH nên có dấu / ở cuối, ví dụ: "/htdocs/"
           server-dir: ${{ secrets.FTP_PATH }}
+
+          # tăng thời gian chờ để tránh Timeout (data socket)
+          timeout: 600000        # 600.000 ms = 10 phút
+
+          # log chi tiết để dễ debug nếu còn lỗi
+          log-level: verbose
 
           exclude: |
             **/.git*
-            **/.github/**
+            **/.git*/**
             **/node_modules/**
+            **/.github/**
             Dockerfile
             docker-compose.yml
             .dockerignore
