--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - "3307:3306"
     volumes:
       - dbdata:/var/lib/mysql
+      - ./quanlytuyendungabc.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   dbdata:
